# MC_DC_Coverage_Calculating

./: .gitignore  CMakeLists.txt  LICENSE  README.md  a.out  demoPass1.cpp  run.sh  runtime.cpp  test  test.c  test.instrumented.ll  test.ll
clang_src/: CMakeLists.txt  ProjHeaders.h  test.c  test.cpp  traverseIf.cpp
src/: BranchCoverage.cpp  CMakeLists.txt  Cond_runtime.cpp  ConditionCoverage.cpp  MCDCCoverage.cpp  ProjHeaders.h  demoPass1.cpp  helloPass.cpp  originalSample.cpp
